Changes for 2.1.0

New features:

Bug fixes:
...G...... [ZBX-3897] fixed processing of proc.num[] item under FreeBSD; thanks to Jim Riggs (Sasha)
A......... [ZBX-5026] fixed error messages when creating IT Service (Eduard)
..F....... [ZBX-5013] fixed requirements check in frontend setup (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.1rc1

New features:

Bug fixes:
A......... [ZBX-4923] fixed ids sorting before update and delete (Eduard)
A......... [ZBX-5026] fixed error messages when creating IT Service (Eduard)
...G...... [ZBX-3897] fixed processing of proc.num[] item under FreeBSD; thanks to Jim Riggs (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.0

Bug fixes:
A......... [ZBX-5025] fixed "undefined index" error when updating specific trigger properties (Pavels)
..F....... [ZBX-5004] fixed error when importing linked templates (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.0rc6

New features:
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
....I..... [ZBXNEXT-973] changed units to "bps" for monitoring of network traffic items (Sasha)
....I..... [ZBXNEXT-973] changed colors in the "MySQL operations" graph (Sasha)
...G...PS. [ZBXNEXT-1220] fixed compilation errors on Solaris (dimir)

--------------------------------------------------------------------------------
Changes for 2.0.0rc5

New features:
..F.I..... [ZBXNEXT-1225] added the "Classic" frontend theme (Pavels)
..F....... [ZBX-1357] updated Brazilian Portuguese, Dutch, Greek, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
...G...PS. [ZBXNEXT-1220] added support of monitoring of log files larger than 2GB (Sasha)