@@ -3,6 +3,7 @@ Changes for 2.1.0
 New features:
 
 Bug fixes:
+..F....... [ZBX-4918] fixed value mapping for {ITEM.VALUE} and {ITEM.LASTVALUE} macros (Vedmak)
 ...G...... [ZBX-3897] fixed processing of proc.num[] item under FreeBSD; thanks to Jim Riggs (Sasha)
 A......... [ZBX-5026] fixed error messages when creating IT Service (Eduard)
 ..F....... [ZBX-5013] fixed requirements check in frontend setup (Vedmak)
